[package]
name = "plumbrs"
version = "0.4.1"
edition = "2024"

[patch.crates-io]
hyper-util   = { git = "https://github.com/awgn/hyper-util.git", rev = "76db6ec" }

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.5", features = ["derive"] }
futures = "0.3.31"
h2 = "0.4.12"
http = "1.3.1"
httparse = "1.10.1"
hyper = { version = "1.7.0", features = ["full"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["client", "client-legacy", "http1", "http2", "service", "tokio"] }
http-body-util = "0.1.3"
anyhow = "1.0.100"
reqwest = "0.12.23"
atomic-time = "0.1.5"
scopeguard = "1.2.0"
crossterm = "0.28"
hdrhistogram = "7.5.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6" }

[profile.release]
debug = false
opt-level = 3
strip = true
codegen-units = 1
lto = true

[features]
orion_client = []
